# Mockapi

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: message_memo.py  message_sending.py
src/mock_platform/: __init__.py  context.py  models.py  registry.py  seeds.py  state.py  tools.py
src/mock_platform/services/: __init__.py  admin.py  contacts.py  memo.py  messaging.py
tests/: test_acceptance.py  test_memo.py
