[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-platform"
version = "0.3.0"
description = "Reusable in-process mock app APIs for automated agent evaluation"
readme = "README.md"
authors = [{ name = "MockAPI Maintainers" }]
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
